# QuotaDock

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.js
docs/superpowers/plans/: 2026-06-18-quotadock-mvp.md
docs/superpowers/specs/: 2026-06-18-codex-usage-tool-design.md
scripts/: sync-webview2-loader.mjs  tauri-with-desktop.mjs
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/fixtures/status/: adversarial-status.txt  complete-status.txt  extra-noise.txt  missing-percent.txt  missing-reset.txt  reordered-lines.txt  unknown-format.txt
src-tauri/src/: codex_probe.rs  commands.rs  floating_bar.rs  lib.rs  main.rs  models.rs  official_links.rs  redaction.rs  reminder.rs  startup.rs  status_parser.rs  tray.rs  tray_icon.rs  updates.rs  usage_store.rs  version.rs  window_state.rs
src-tauri/windows/: hooks.nsh
src/lib/api/: tauri.ts
src/lib/components/: CodexHealthPanel.svelte  ConfidenceBadge.svelte  ConfidenceBadge.test.ts  HistoryList.svelte  ManualEntryForm.svelte  PasteStatusDialog.svelte  QuotaDashboard.svelte  QuotaDashboard.test.ts  SettingsPanel.svelte  UsageSummary.svelte  UsageSummary.test.ts
src/lib/state/: usageState.svelte.ts  usageState.test.ts
src/lib/types/: usage.ts
src/lib/utils/: format.test.ts  format.ts  freshness.test.ts  freshness.ts
src/routes/: +page.svelte
