[package]
name = "quotadock"
version = "0.2.0"
description = "Windows-first Codex usage utility shell."
authors = ["Ruping Liu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quotadock_lib"
crate-type = ["rlib"]

[features]
default = []
desktop = ["tauri/tray-icon"]

[[bin]]
name = "quotadock"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "native-tls"] }
semver = "1"
sha2 = "0.10"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_System_IO",
  "Win32_System_LibraryLoader",
  "Win32_System_Pipes",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }
portable-pty = "0.9.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
